feat: register and login added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="/src/assets/images/statics/logo.jpeg" type="image/x-icon">
   <title>GameVerse Hub</title>
+  <!-- tailwind cdn -->
+  <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+  <!-- logo -->
+  <link rel="shortcut icon" href="/src/assets/images/statics/logo.jpeg" type="image/x-icon">
 </head>
 
 <body>
