--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- tailwind cdn -->
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   <!-- logo -->
-  <link rel="shortcut icon" href="/src/assets/images/statics/logo.jpeg" type="image/x-icon">
+  <link rel="shortcut icon" href="/src/assets/images/statics/logo.png" type="image/x-icon">
 </head>
 
 <body>
